force-app/main/default/objects/Zoom_Setting__c/Zoom_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores Zoom Integration Credentials securely (OAuth client secrets).</description>
    <label>Zoom Setting</label>
</CustomObject>