force-app/main/default/objects/Zoom_Setting__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Zoom Account ID for Server-to-Server OAuth</description>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>