force-app/main/default/objects/Zoom_Setting__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Zoom Server-to-Server OAuth Client ID</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>