force-app/main/default/objects/Zoom_Setting__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Zoom Server-to-Server OAuth Client Secret</description>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>