force-app/main/default/objects/Zoom_Setting__c/fields/Default_Host_Email__c.field-meta.xml
<CustomField>
    <fullName>Default_Host_Email__c</fullName>
    <description>Zoom default meeting host email address (e.g. imrohitkumar387@gmail.com)</description>
    <label>Default Host Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>